--- a/index.html
+++ b/index.html
@@ -448,54 +448,79 @@
           </svg>
         </button>
         <form class="modal-form">
-          <p>Leave your contacts and we will call you back</p>
+          <p class="title-modal-form">
+            Leave your contacts and we will call you back
+          </p>
           <label class="modal-form-field">
             <span class="modal-form-input-desc"> Name </span>
-            <input
-              type="text"
-              name="user-name"
-              class="modal-form-input"
-              required
-              pattern="^[A-Za-zА-Яа-я]+$"
-              minlength="2"
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-form-input"
+                required
+                pattern="^[A-Za-zА-Яа-я]+$"
+                minlength="2"
+              />
+              <svg width="12" height="12" class="modal-form-icon">
+                <use
+                  href="./images/symbol-defs-modal-copy.svg#icon-name-modal"
+                ></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc"> Phone </span>
-            <input
-              type="tel"
-              name="user-phone"
-              class="modal-form-input"
-              required
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg width="12" height="12" class="modal-form-icon">
+                <use
+                  href="./images/symbol-defs-modal-copy.svg#icon-phone-modal"
+                ></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc"> Email </span>
-            <input
-              type="text"
-              name="user-email"
-              class="modal-form-input"
-              required
-            />
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user-email"
+                class="modal-form-input"
+                required
+              />
+              <svg width="12" height="12" class="modal-form-icon">
+                <use
+                  href="./images/symbol-defs-modal-copy.svg#icon-email-modal"
+                ></use>
+              </svg>
+            </span>
           </label>
           <label class="modal-form-field">
             <span class="modal-form-input-desc"> Comment </span>
             <textarea
               name="user-comment"
-              id=""
-              cols="30"
-              rows="10"
               class="modal-form-message"
               placeholder="Text input"
             ></textarea>
-            <input id="user-policy" type="text" class="modal-form-check" />
-            <label for="user-policy" class="modal-form-check-desc"
-              >I accept the terms and conditions of the
-              <a href=""> Privacy Policy </a>
-              <button type="submit" class="modal-form-submit">Send</button>
-            </label>
+          </label>
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user-policy"
+            class="modal-form-check"
+          />
+          <label for="user-policy" class="modal-form-check-desc"
+            >I accept the terms and conditions of the
+            <a href=""> Privacy Policy </a>
+            <button type="submit" class="modal-form-submit">Send</button>
           </label>
         </form>
       </div>
