--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
               </svg>
             </span>
           </label>
-          <label class="modal-form-field">
+          <label class="modal-form-field-comment">
             <span class="modal-form-input-desc"> Comment </span>
             <textarea
               name="user-comment"
@@ -518,10 +518,10 @@
             class="modal-form-check hidden-header"
           />
           <label for="user-policy" class="modal-form-check-desc"
-            >I accept the terms and conditions of the
+            >I accept the terms and conditions of the&nbsp;
             <a href=""> Privacy Policy </a>
-            <button type="submit" class="modal-form-submit">Send</button>
           </label>
+          <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
     </div>
