--- a/index.html
+++ b/index.html
@@ -439,23 +439,25 @@
           </ul>
         </div>
         <div class="subscribe-footer">
-          <p class="subscribe-title">Subscribe</p>
           <form>
-            <input
-              type="email"
-              name="user-email-subscribe"
-              required
-              class="subscribe-input-footer"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="subscribe-btn">
-              Subscribe
-              <svg width="24" heigh="20" class="svg-subscribe">
-                <use
-                  href="./images/symbol-defs-modal-copy.svg#icon-icon-send"
-                ></use>
-              </svg>
-            </button>
+            <p class="subscribe-title">Subscribe</p>
+            <div class="footer-form-input">
+              <input
+                type="email"
+                name="user-email-subscribe"
+                required
+                class="subscribe-input-footer"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="subscribe-btn">
+                Subscribe
+                <svg width="24" heigh="20" class="svg-subscribe">
+                  <use
+                    href="./images/symbol-defs-modal-copy.svg#icon-icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
