--- a/portfolio.html
+++ b/portfolio.html
@@ -326,6 +326,27 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <form>
+            <p class="subscribe-title">Subscribe</p>
+            <div class="footer-form-input">
+              <input
+                type="email"
+                name="user-email-subscribe"
+                required
+                class="subscribe-input-footer"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="subscribe-btn">
+                Subscribe
+                <svg width="24" heigh="20" class="svg-subscribe">
+                  <use
+                    href="./images/symbol-defs-modal-copy.svg#icon-icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
       </div>
     </footer>
   </body>
